2003-07-09  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps-manual/C/gramps-manual.xml: Straighten up versioning.
	* doc/gramps-manual/C/gramps-manual-C.omf: Update version and date.
	* doc/gramps.1.in, doc/gramps.1: Update the date.

2003-07-08  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/SelectChild.py: Fix typos upsetting translation. 
	* src/plugins/book.glade: Mark dummy strings as non-translatable.
	* src/po/template.po: Update the above corrections in template.
	* src/po/ru.po: First draft of Russian translation for 0.9.3.

2003-07-08  Donald Peterson  <dpeterson@sigmaxi.org>
	* doc/gramps-manual/C/gramps-manual.xml: Fixed a couple of typos

2003-07-07  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/DetAncestralReport.py: add import of string
	* src/plugins/DetDescendantReport.py: add import of string
	* src/Date.py: compare date modes when comparing dates
	* src/EditPerson.py: save date strings which comparing for changes
	* src/FamilyView.py: Scope Person.male properly

2003-07-07  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/DetDescendantReport.py: Enable book functionality.
	Fix styles in book. Switch to tuple of options. 
	* src/plugins/AncestorReport.py: Fix styles in book. 
	* src/plugins/Ancestors.py: Fix styles in book.
	* src/plugins/DescendReport.py: Fix styles in book.
	* src/plugins/FtmStyleAncestors.py: Fix styles in book.
	* src/plugins/FtmStyleDescendants.py: Fix styles in book.
	* src/plugins/IndivComplete.py: Switch to tuple of options.
	* src/plugins/IndivSummary.py: Switch to tuple of options.
	* src/plugins/SimpleBookTitle.py: Fix styles in book.
	* src/plugins/FamilyGroup.py: Fix styles in book.
	* src/plugins/DetAncestralReport.py: Fix styles in book.
	* src/Makefile.am: Ship SelectPerson.py and choose.glade.
	* src/plugins/Makefile.am: Ship SimpleBookTitle.py and book.glade.
	* NEWS: Some updates for upcoming release.
	* doc/gramps-manual/C/gramps-manual.xml: Update manual. 