@@ -1,3 +1,6 @@
+2003-07-09  Donald Peterson  <dpeterson@sigmaxi.org>
+	* doc/gramps-manual/C/gramps-manual.xml: More corrections.
+
 2003-07-09  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* doc/gramps-manual/C/gramps-manual.xml: Straighten up versioning.
 	* doc/gramps-manual/C/gramps-manual-C.omf: Update version and date.
